[workspace]
resolver = "2"
members = [
  "diagnostics",
  "diagnostics-macros",
]

[workspace.package]
version = "0.1.0"
authors = ["miden contributors"]
description = "Diagnostics infrastructure for Polygon Miden compilers"
repository = "https://github.com/0xPolygonMiden/miden-diagnostics"
homepage = "https://github.com/0xPolygonMiden/miden-diagnostics"
documentation = "https://github.com/0xPolygonMiden/miden-diagnostics"
categories = ["Compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.67"

[profile.release]
opt-level = 2
lto = false
