[package]
name = "miden-diagnostics"
description.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
atty = "0.2"
codespan = "0.11"
codespan-reporting = "0.11"
flurry = "0.4"
miden-diagnostics-macros = { package = "miden-diagnostics-macros", path = "../diagnostics-macros", version = "0.1" }
parking_lot = "0.12"
rustc-hash = "1.1"
unicode-width = "0.1"
